--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   sqflite: ^2.0.0+4
   get_it: ^7.2.0
   path:
+  mobx: ^2.0.4
+  flutter_mobx: ^2.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -35,6 +37,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.2
+  mobx_codegen: ^2.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
