--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path:
   mobx: ^2.0.4
   flutter_mobx: ^2.0.2
+  mask_text_input_formatter: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
