--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   mobx: ^2.0.4
   flutter_mobx: ^2.0.2
   mask_text_input_formatter: ^2.0.0
+  url_launcher: ^6.0.17
 
 
   # The following adds the Cupertino Icons font to your application.
