--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.teste">
+    package="com.example.agenda">
    <application
-        android:label="teste"
+        android:label="Agenda"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/icon_agenda">
         <activity
             android:name=".MainActivity"
             android:exported="true"
